Fix checkmark not showing hor filter

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -302,6 +302,10 @@
   -webkit-appearance: none;
 }
 
+.no-js .facet-checkbox input[type='checkbox'] {
+  z-index: 0;
+}
+
 .facet-checkbox > svg {
   background-color: rgb(var(--color-background));
   margin-right: 1.2rem;
